--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,3 +1,83 @@
 block footer
     footer#footer.footer
         .container
+            .footer__inner
+                .footer__inner-nav
+                    .footer__inner-nav-leftside
+                        ul
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--white Каталог
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray ФИЛЬТРЫ
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Ремни
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Крепёж
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Двигатель
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Гидравлика
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Трансмиссия
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Электрика
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Пальцы и втулки
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--gray Ремкомплекты
+                    .footer__inner-nav-rightside
+                        ul
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--white Сервис
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--white Новостной блог
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--white Оплата и доставка
+                            li
+                                a(href="javascript:void(0)").footer__link.footer__link--white Контакты
+                .footer__inner-contacts
+                    .footer__inner-contacts-items
+                        .footer__inner-contacts-item
+                            a(href="tel:74959891123") +7 (495) 989-11-23
+                            noindex
+                                a(href="javascript:void(0)" rel="nofollow")
+                                    include ../icons/icon_telegram.svg
+                        span Обратный звонок
+                    .footer__inner-contacts-items
+                        .footer__inner-contacts-item
+                            a(href="tel:79362942463") +7 (936) 294-24-63
+                            noindex
+                                a(href="javascript:void(0)" rel="nofollow")
+                                    include ../icons/icon_whatsapp.svg
+                        .footer__inner-contacts-item
+                            a(href="tel:79362942643") +7 (936) 294-26-43
+                            noindex
+                                a(href="javascript:void(0)" rel="nofollow")
+                                    include ../icons/icon_whatsapp.svg
+                        span Менеджер
+                    .footer__inner-contacts-mail
+                        a(href="mailto:info@parts-cat.ru") info@parts-cat.ru
+                        span По всем вопросам и предложениям
+                .footer__bottom
+                    .footer__policy
+                        a(href="policy.html") Политика конфиденциальности
+
+                    .footer__rights © ООО «КАТ» <span></span>. Все права защищены
+
+                    .footer__devs
+                        a(href="https://di-project.studio/") Разработка сайта: Di-Project Studio
+
+                .footer__inner-logo
+                    a(href="/").footer__inner-logo-image
+                        include ../icons/icon_logo.svg
+                    .footer__inner-logo-payments
+                        a(href="javascript:void(0)").footer__inner-logo-payments-item
+                            include ../icons/icon_t-bank.svg
+                        a(href="javascript:void(0)").footer__inner-logo-payments-item
+                            include ../icons/icon_mir.svg
+                        a(href="javascript:void(0)").footer__inner-logo-payments-item
+                            include ../icons/icon_visa.svg
+                        a(href="javascript:void(0)").footer__inner-logo-payments-item
+                            include ../icons/icon_mastercard.svg
+                        a(href="javascript:void(0)").footer__inner-logo-payments-item
+                            include ../icons/icon_sbp.svg
