--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -24,7 +24,7 @@ block header
                             noindex
                                 a(href="javascript:void(0)" rel="nofollow")
                                     include ../icons/icon_whatsapp.svg
-                        .header__socals-item
+                        .header__socials-item
                             noindex
                                 a(href="javascript:void(0)" rel="nofollow")
                                     include ../icons/icon_telegram.svg
