--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -3,62 +3,82 @@
 
 
 * {
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    font-style: normal;
-    color: $white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  color: $white;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    -webkit-text-size-adjust: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    transition: .4s;
-    background-color: $black;
+  -webkit-text-size-adjust: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transition: .4s;
+  background-color: $black;
 }
 
 body.overflow-hidden {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 body b {
-    font-weight: 700;
-    color: inherit;
+  font-weight: 700;
+  color: inherit;
 }
 
 body.compensate-for-scrollbar {
-    overflow: visible!important;
-    padding: 0!important;
+  overflow: visible !important;
+  padding: 0 !important;
 }
 
 main {
-    min-height: calc(max(calc(100vh - 614px), 350px));
+  min-height: calc(max(calc(100vh - 614px), 350px));
 }
 
 #page {
-    position: relative;
-    min-width: 360px;
-    min-height: 100%;
-    max-width: 100%;
-    @include flexColumn;
+  position: relative;
+  min-width: 360px;
+  min-height: 100%;
+  max-width: 100%;
+  @include flexColumn;
 }
 
 #page::before {
-    content: '';
+  content: '';
 }
 
 section {
-    position: relative;
+  position: relative;
 }
 
 li {
-    list-style: none;
+  list-style: none;
+}
+
+#overlay {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: $transition;
+
+  &.show {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 500;
+    opacity: 0.4;
+    background: $black;
+    visibility: visible;
+    pointer-events: auto;
+  }
 }
 
 
@@ -67,8 +87,8 @@ li {
 /////////////////////
 
 ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
+  width: 12px;
+  height: 12px;
 }
 
 ::-webkit-scrollbar-track {
@@ -80,8 +100,8 @@ li {
 }
 
 * {
-    scrollbar-width: thin;
-    //scrollbar-color: $blue-dark transparent;
+  scrollbar-width: thin;
+  //scrollbar-color: $blue-dark transparent;
 }
 
 
@@ -92,134 +112,135 @@ li {
 /* Убираем стрелки в Chrome, Safari, Edge, Opera */
 .range-values input::-webkit-outer-spin-button,
 .range-values input::-webkit-inner-spin-button {
-    margin: 0;
-    -webkit-appearance: none;
+  margin: 0;
+  -webkit-appearance: none;
 }
 
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 textarea,
 input[type="text"],
 input[type="button"],
 input[type="submit"], {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    outline: none !important;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: none !important;
 }
 
 input:focus,
 input:focus-visible,
 input:focus::after,
 input:focus-visible::after {
-    outline: none !important;
-    box-shadow: none !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 input {
-    outline: none;
-    border: 0;
+  outline: none;
+  border: 0;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield; /* Убирает стандартный стиль в Firefox */
+  -moz-appearance: textfield; /* Убирает стандартный стиль в Firefox */
 }
 
 .input {
+  color: $black;
+  font-weight: 500;
+  line-height: 140%; /* 22.4px */
+  padding: 22px 20px;
+
+  &::placeholder {
+    color: $gray-03;
+    font-weight: 500;
+    line-height: 140%; /* 22.4px */
+    transition: $transition;
+  }
+
+  &:focus::placeholder {
     color: $black;
     font-weight: 500;
     line-height: 140%; /* 22.4px */
-    padding: 22px 20px;
+  }
 
-    &::placeholder {
-        color: $gray-03;
-        font-weight: 500;
-        line-height: 140%; /* 22.4px */
-        transition: $transition;
-    }
+  &.input--white {
+    background: $white;
+  }
 
-    &:focus::placeholder {
-        color: $black;
-        font-weight: 500;
-        line-height: 140%; /* 22.4px */
-    }
-
-    &.input--white {
-        background: $white;
-    }
-    &.input--gray {
-        background: $gray-01;
-    }
+  &.input--gray {
+    background: $gray-01;
+  }
 }
 
 // Checkbox
 .checkbox {
-    input {
-        display: none;
-    }
+  input {
+    display: none;
+  }
 
-    label {
-        display: flex;
-        user-select: none;
-        cursor: pointer;
+  label {
+    display: flex;
+    user-select: none;
+    cursor: pointer;
 
-        &::before {
-            content: '';
-
-        }
-
-        &.disabled {
-            cursor: default;
-        }
-    }
-
-    input:checked + label {
-        &::before {
-            content: '';
-
-        }
-
-        &.disabled::before {
-
-        }
-    }
-
-    & ~ .checkbox {
+    &::before {
+      content: '';
 
     }
+
+    &.disabled {
+      cursor: default;
+    }
+  }
+
+  input:checked + label {
+    &::before {
+      content: '';
+
+    }
+
+    &.disabled::before {
+
+    }
+  }
+
+  & ~ .checkbox {
+
+  }
 }
 
 // Radiobutton
 .radio {
-    input {
-        display: none;
+  input {
+    display: none;
+  }
+
+  label {
+    display: flex;
+    user-select: none;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+
     }
+  }
 
-    label {
-        display: flex;
-        user-select: none;
-        cursor: pointer;
+  input:checked + label {
+    &::before {
+      content: '';
 
-        &::before {
-            content: '';
-
-        }
     }
+  }
 
-    input:checked + label {
-        &::before {
-            content: '';
-
-        }
-    }
-
-    & ~ .radio {
-        margin-top: 8px;
-    }
+  & ~ .radio {
+    margin-top: 8px;
+  }
 }
 
 /////////////////////
@@ -227,41 +248,41 @@ input[type="number"] {
 /////////////////////
 
 .btn {
-    @include flexCenterCenter;
-    cursor: pointer;
-    transition: $transition;
-    font-family: "Druk Cyr", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: uppercase;
+  @include flexCenterCenter;
+  cursor: pointer;
+  transition: $transition;
+  font-family: "Druk Cyr", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
 
-    &.btn--brand {
-        background-color: $brand;
-        color: $black;
+  &.btn--brand {
+    background-color: $brand;
+    color: $black;
 
-        &:hover {
-            background: $hover;
-        }
+    &:hover {
+      background: $hover;
     }
+  }
 
-    &.btn--gray {
-        background-color: $gray-01;
-        color: $black;
+  &.btn--gray {
+    background-color: $gray-01;
+    color: $black;
 
-        &:hover {
-            background: $gray-02;
-        }
+    &:hover {
+      background: $gray-02;
     }
+  }
 
-    &.btn--black {
-        background-color: $black;
-        color: $white;
+  &.btn--black {
+    background-color: $black;
+    color: $white;
 
-        &:hover {
-            background: $gray-04;
-        }
+    &:hover {
+      background: $gray-04;
     }
+  }
 }
 
 
@@ -269,7 +290,7 @@ input[type="number"] {
 /// LINKS
 /////////////////////
 a {
-    display: inline-block;
+  display: inline-block;
 }
 
 
@@ -283,8 +304,8 @@ a {
 /////////////////////
 
 video, svg, image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 section + section {
@@ -296,13 +317,123 @@ section + section {
 /////////////////////
 
 
-
 /////////////////////
 /// TYPOGRAPHY
 /////////////////////
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Druk Cyr", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+h1, h2 {
+  font-size: 42px;
+
+  @include breakpoint(md) {
+    font-size: 60px;
+  }
+
+  @include breakpoint(lg) {
+    font-size: 72px;
+  }
+
+  @include breakpoint(xl) {
+    font-size: 87px;
+  }
+}
+
+h3 {
+  font-size: 24px;
+
+  @include breakpoint(md) {
+    font-size: 36px;
+  }
+
+  @include breakpoint(lg) {
+    font-size: 42px;
+  }
+
+  @include breakpoint(xl) {
+    font-size: 52px;
+  }
+}
+
+h4 {
+  font-size: 20px;
+
+  @include breakpoint(md) {
+    font-size: 28px;
+  }
+
+  @include breakpoint(lg) {
+    font-size: 32px;
+  }
+
+  @include breakpoint(xl) {
+    font-size: 40px;
+  }
+}
 
 
 /////////////////////
 /// SWIPER SLIDER
 /////////////////////
+
+.swiper-nav {
+  pointer-events: none;
+  &.swiper-nav--gray {
+    .button-prev, .button-next {
+      background: #FEFEFE4D;
+
+      &:hover {
+        background: #FEFEFE66;
+      }
+    }
+
+
+
+  }
+
+  &.swiper-nav--yellow {
+
+    .button-prev, .button-next {
+      background: $brand;
+
+      &:hover {
+        background: $hover;
+      }
+    }
+  }
+
+  .button-prev, .button-next {
+    width: 60px;
+    height: 60px;
+    pointer-events: auto;
+    transition: $transition;
+    cursor: pointer;
+    @include flexCenterCenter;
+
+    &:before {
+      content: "";
+      width: 24px;
+      height: 24px;
+      flex-shrink: 0;
+
+    }
+  }
+
+  .button-prev {
+    &:before {
+      background: url("../icons/icon_chevron-left--white.svg");
+    }
+  }
+
+  .button-next {
+    &:before {
+      background: url("../icons/icon_chevron-right--white.svg");
+    }
+  }
+}
