--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -4,16 +4,17 @@
 .sidebar {
   position: fixed;
   top: 0;
-  left: 0;
-  transform: translateX(100%);
+  right: 0;
+  transform: translateX(100vw);
   background: $black;
   padding: 20px 10px;
   display: grid;
-  z-index: 10;
+  z-index: 999;
   width: 100%;
   height: 100%;
   transition: $transition;
   max-width: 360px;
+  overflow-y: scroll;
 
   &.show {
     transform: translateX(0);
@@ -26,34 +27,150 @@
     margin-bottom: 30px;
   }
 
-  &__catalog {
+  &__nav {
+    margin-top: 20px;
     display: grid;
-    gap: 10px;
+    gap: 20px;
 
-    &-title {
-      font-size: 15px;
-      font-weight: 600;
-      text-transform: uppercase;
-      @include flexCenterBetween;
-
-      &:after {
-        content: "";
-        width: 16px;
-        height: 16px;
-        display: block;
-        background: url("../icons/icon_chevron-down--white.svg") no-repeat center center;
-      }
-    }
-
-    .submenu {
+    &-links {
       display: grid;
-      gap: 10px;
+      gap: 20px;
 
       li {
         a {
+          font-size: 15px;
           font-weight: 600;
-          line-height: 160%; /* 25.6px */
+          text-transform: uppercase;
         }
+      }
+    }
+  }
+
+  [data-showdown] {
+    &.showdown {
+      [data-trigger]:after {
+        transform: rotate(180deg);
+      }
+
+      .submenu {
+        margin-top: 10px;
+      }
+    }
+  }
+
+  [data-trigger] {
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    @include flexCenterBetween;
+
+    &:after {
+      content: "";
+      width: 16px;
+      height: 16px;
+      display: block;
+      background: url("../icons/icon_chevron-down--white.svg") no-repeat center center;
+      transition: $transition;
+    }
+  }
+
+  .submenu {
+    display: grid;
+    gap: 10px;
+
+    li {
+      a {
+        font-weight: 600;
+        line-height: 160%; /* 25.6px */
+      }
+    }
+  }
+
+  &__user {
+    margin-top: 20px;
+
+    .btn {
+      width: 100%;
+      padding: 12px;
+      font-size: 20px;
+      letter-spacing: 0.8px;
+      gap: 16px;
+
+      &:before {
+        content: "";
+        display: block;
+        width: 20px;
+        height: 20px;
+        background: url("../icons/icon_user--filled.svg") no-repeat center center;
+      }
+    }
+  }
+
+  &__contacts {
+    margin-top: 20px;
+    display: grid;
+    gap: 20px;
+
+    .header__phone {
+      a {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        text-transform: uppercase;
+      }
+
+      &.header__phone--manager {
+        display: grid;
+      }
+    }
+
+    .header__mail, .header__time {
+      display: grid;
+      gap: 4px;
+
+      a {
+        font-size: 18px;
+      }
+
+      span {
+        &:first-child {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  &__socials {
+    @include flexAlignCenter;
+    margin-top: 20px;
+    gap: 10px;
+
+    &-item {
+      @include flexCenterCenter;
+    }
+  }
+
+  &__feedback {
+    margin-top: 20px;
+
+    .btn {
+      padding: 18px;
+      font-size: 24px;
+      letter-spacing: 0.96px;
+      width: 100%;
+    }
+  }
+
+  &__search {
+    margin-top: 30px;
+
+    .header__search {
+      width: 100%;
+
+      input {
+        padding: 22px 20px;
+
       }
     }
   }
