--- a/src/components/sections/_section-hero.pug
+++ b/src/components/sections/_section-hero.pug
@@ -9,7 +9,7 @@ section.section-hero
 
             a(href="javascript:void(0)").btn.btn--brand В каталог
     .section-hero__slider
-        .swiper-nav.swiper-nav--yellow
+        .swiper-nav.swiper-nav--gray
             button.button-prev
             button.button-next
         .swiper
