--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,3 +6,11 @@ block title
 
 block main
     include ../components/sections/_section-hero
+    include ../components/sections/_section-products-slider
+    +sectionProductsSlider('Популярные товары')
+    include ../components/sections/_section-catalog
+    include ../components/sections/_section-advantages
+    include ../components/sections/_section-about
+    include ../components/sections/_section-delivery
+    include ../components/sections/_section-faq
+    include ../components/sections/_section-news
