--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -1,1 +1,7 @@
 @use "../components/sections/section-hero";
+@use "../components/sections/section-catalog";
+@use "../components/sections/section-advantages";
+@use "../components/sections/section-about";
+@use "../components/sections/section-delivery";
+@use "../components/sections/section-faq";
+@use "../components/sections/section-news";
