--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,8 @@
 @use 'components/fancybox-custom';
 @use 'components/popups';
 @use "components/sidebar";
+@use "components/sections/section-products-slider";
+@use "components/product-card";
 
 @use 'pages/index';
 
