--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -47,7 +47,7 @@ block header
                             span Каталог
                         ul.submenu
                             li
-                                a(href="javascript:void(0)") Фильтры
+                                a(href="catalog.html") Фильтры
                             li
                                 a(href="javascript:void(0)") Ремни
                             li
