--- a/src/layout/layout.pug
+++ b/src/layout/layout.pug
@@ -18,7 +18,7 @@ html(lang="ru")
         // Styles::End
 
         if yandexMap === true
-            script(data-skip-moving="true" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU")
+            script(data-skip-moving="true" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&width=auto&height=auto")
 
         include ../includes/_favicon
 
