--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,6 +3,7 @@ extends ../layout/layout
 block title
     - var title = 'Главная'
     - var page = 'page-main'
+    - var yandexMap = true
 
 block main
     include ../components/sections/_section-hero
@@ -14,3 +15,5 @@ block main
     include ../components/sections/_section-delivery
     include ../components/sections/_section-faq
     include ../components/sections/_section-news
+    include ../components/sections/_section-contacts
+    include ../components/sections/_section-feedback
