--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -5,3 +5,5 @@
 @use "../components/sections/section-delivery";
 @use "../components/sections/section-faq";
 @use "../components/sections/section-news";
+@use "../components/sections/section-contacts";
+@use "../components/sections/section-feedback";
