--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @use "components/sidebar";
 @use "components/sections/section-products-slider";
 @use "components/product-card";
+@use "components/news-card";
 
 @use 'pages/index';
 
