--- a/src/components/_news-card.pug
+++ b/src/components/_news-card.pug
@@ -1,5 +1,5 @@
 mixin newsCard(title, text, index)
-    .news-card
+    a(href="javascript:void(0)").news-card
         .news-card__image
             +img(`news-card-image-${index + 1}.jpg`)
         .news-card__title= title
