--- a/src/styles/components/_breadcrumbs.scss
+++ b/src/styles/components/_breadcrumbs.scss
@@ -1,24 +1,41 @@
-.page-header {
-
-}
+@use "../base/variables" as *;
+@use "../base/mixins" as *;
 
 .breadcrumbs {
+    margin-top: 20px;
+    margin-bottom: 40px;
 
+    @include breakpoint(md) {
+        margin-bottom: 50px;
+    }
+
+    @include breakpoint(lg) {
+        margin-bottom: 60px;
+    }
 }
 
 .breadcrumbs-wrapper {
-
+    @include flexAlignCenter;
+    gap: 20px;
+    max-width: 100vw;
+    overflow-x: auto;
 }
 
 .breadcrumbs-item {
+    @include flexAlignCenter;
+    gap: 20px;
 
+    &:not(:first-child) {
+        &:before {
+            content: "";
+            display: block;
+            width: 20px;
+            height: 1px;
+            background: $brand;
+        }
+    }
 }
 
 .breadcrumbs-item span {
     user-select: none;
 }
-
-.breadcrumbs-separator {
-
-}
-
