--- a/src/styles/components/sections/_section-news.scss
+++ b/src/styles/components/sections/_section-news.scss
@@ -3,8 +3,67 @@
 
 .section-news {
   &__inner {
+    display: grid;
+    grid-template-columns: minmax(0, 1fr);
+
+    @include breakpoint(md) {
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    }
+
     .section-title {
       text-align: center;
+      margin-bottom: 40px;
+
+
+      @include breakpoint(md) {
+        text-align: unset;
+        order: 1;
+      }
+
+      @include breakpoint(lg) {
+        margin-bottom: 60px;
+      }
+    }
+  }
+
+  &__slider {
+
+    @include breakpoint(md) {
+      order: 3;
+      grid-column: 1 / 3;
+    }
+    .swiper-pagination {
+      position: static;
+      margin-top: 40px;
+
+      @include breakpoint(lg) {
+        display: none;
+      }
+    }
+  }
+
+  &__button {
+    order: 3;
+    margin-top: 40px;
+    justify-self: center;
+
+    @include breakpoint(md) {
+      order: 2;
+      margin-top: 0;
+      justify-self: flex-end;
+    }
+    .btn {
+      padding: 18px 63px;
+      font-size: 24px;
+      font-weight: 700;
+      letter-spacing: 0.96px;
+      width: fit-content;
+
+      @include breakpoint(md) {
+        padding: 19px 53px;
+        font-size: 32px;
+        letter-spacing: 1.28px;
+      }
     }
   }
 }
