--- a/src/styles/includes/_header.scss
+++ b/src/styles/includes/_header.scss
@@ -2,7 +2,10 @@
 @use "../../styles/base/mixins" as *;
 
 .header {
-
+  position: sticky;
+  z-index: 500;
+  top: 0;
+  left: 0;
   &-top {
     padding: 10px 0;
     background: $black;
