--- a/src/components/_sidebar.pug
+++ b/src/components/_sidebar.pug
@@ -1,7 +1,7 @@
 .sidebar#sidebar
     .sidebar__inner
         .sidebar__close#sidebarClose
-            include ../icons/icon-x--yellow.svg
+            include ../icons/icon_x--yellow.svg
         .sidebar__catalog(data-showdown)
             .sidebar__catalog-title(data-trigger) Каталог
         .sidebar__nav
