--- a/src/components/_product-card.pug
+++ b/src/components/_product-card.pug
@@ -1,8 +1,8 @@
 .product-card
-    a(href="javascript:void(0)").product-card__image
+    a(href="product.html").product-card__image
         +img('product-card-image.png')
     .product-card__main
-        a(href="javascript:void(0)").product-card__title Фильтр воздушный SEM 518-4406
+        a(href="product.html").product-card__title Фильтр воздушный SEM 518-4406
         .product-card__article Артикул: 518-4406
         .product-card__brand Бренд: CAT
         .product-card__prices
