--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -31,7 +31,7 @@ block header
                     .header__feedback
                         button.btn.btn--brand Обратный звонок
                     .header__adaptive
-                        a(href="javascript:void(0)").header__cart
+                        a(href="cart.html").header__cart
                             include ../icons/icon_cart.svg
                             .header__cart-counter 10
 
