--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -93,11 +93,11 @@ block header
                                         li
                                             a(href="javascript:void(0)") Техническое обслуживание
                                 li
-                                    a(href="javascript:void(0)") Новостной блог
+                                    a(href="news.html") Новостной блог
                                 li
                                     a(href="javascript:void(0)") Оплата и доставка
                                 li
-                                    a(href="javascript:void(0)") Контакты
+                                    a(href="contacts.html") Контакты
 
                     .header__user
                         a(href="javascript:void(0)").header__user-account
