--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,6 +24,7 @@
 @use "components/sections/section-seo";
 @use "components/counter";
 @use "components/cart-item";
+@use "components/maps-block";
 
 @use 'pages/index';
 @use 'pages/catalog';
@@ -31,4 +32,7 @@
 @use 'pages/cart';
 @use 'pages/order';
 @use 'pages/done';
+@use 'pages/contacts';
+@use 'pages/news';
+@use 'pages/news-detail';
 
