--- a/src/pages/done.pug
+++ b/src/pages/done.pug
@@ -10,5 +10,33 @@ block main
     section.done
         .container
             .done__inner
-                .h3-title Спасибо! Заказ оформлен
+                .h3-title
+                    p Спасибо!
+                    p Заказ оформлен
+                .done__details
+                    p.
+                        Ваш заказ <span>№30</span> от 25.04.2024 12:03 успешно создан.
+                        Номер вашей оплаты: <span>№ 30/1</span>
+                        <br>
+                        <br>
+                        Вы можете следить за выполнением своего заказа в <a href="javascript:void(0)">личном кабинете</a>.
+                        Пароль от личного кабинета отправили вам на почту
+                .h4-title Оплата заказа
+                .done__bill
+                    p Счёт на оплату
+                    a(href="javascript:void(0)").done__bill-link Счёт на оплату
+                .done__payment
+                    p.
+                        Если окно с платёжной информацией не открылось автоматически,
+                        нажмите на ссылку <a href="javascript:void(0)">Оплатить заказ</a>
+
+                .done__download
+                    p.
+                        Для того, чтобы скачать счёт в формате pdf,
+                        нажмите на ссылку
+                        <a href="javascript:void(0)">Скачать счёт</a>
+
+                .done__buttons
+                    a(href="javascript:void(0)").btn.btn--brand В личный кабинет
+                    a(href="javascript:void(0)").btn.btn--black Перейти на главную
 
