--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,26 +1,27 @@
 @font-face {
-  font-family: "DrukCyr", sans-serif;
-  src: local("DrukCyr-Bold"), url("/assets/fonts/DrukCyr-Bold.woff2") format("woff");
+  font-family: "Druk Cyr", sans-serif;
+  src: url("/assets/fonts/DrukCyr-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat"), url("/assets/fonts/Montserrat-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/Montserrat-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat"), url("/assets/fonts/Montserrat-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/Montserrat-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat"), url("/assets/fonts/Montserrat-Semibold.ttf") format("truetype");
+  src: url("/assets/fonts/Montserrat-Semibold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
